...
                onExpansionChanged: (val) {
                  setState(() {
                    _isYearExpanded = val;
                  });
                },
                title: Text(
                  '연도별 듣기',
                  style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold),
                ),
                childrenPadding: EdgeInsets.symmetric(horizontal: 16, vertical: 8),
                children: [
                  ...filteredRounds.entries.map((entry) {
                    return Container(
...
                onExpansionChanged: (val) {
                  setState(() {
                    _isCategoryExpanded = val;
                  });
                },
                title: Text(
                  '과목별 듣기',
                  style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold),
                ),
                childrenPadding: EdgeInsets.symmetric(horizontal: 16, vertical: 8),
                children: [
                  ...categories.map((cat) {
                    return Container(
...
